Fix page too narrow on mobile

--- a/css/commons.css
+++ b/css/commons.css
@@ -85,18 +85,6 @@ p,
     flex: auto;
 }
 
-@media screen and (max-width: 575px) {
-    .soul-header {
-        padding: 8px;
-    }
-
-    .soul-main {
-        padding-left: 0;
-        padding-right: 0;
-    }
-}
-
-
 /***********************
  * BOOTSTRAP-VUE FIXES *
  ***********************/
